# sound_processor

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
app/: main.cpp
include/: args_parser.hpp  logger.hpp  pipeline.hpp  pipeline_builder.hpp
include/filters/: absolute.hpp  abstract_generator.hpp  am_generator.hpp  ampl.hpp  fm_generator.hpp  ifilter.hpp  lowpass.hpp  normalize.hpp  reverse.hpp  silence.hpp  sin_generator.hpp  sound_cut.hpp  timestretch.hpp
include/wav/: file_processor.hpp  wav_chunks.hpp  wav_reader.hpp  wav_writer.hpp  waveform.hpp
src/: args_parser.cpp  logger.cpp  pipeline.cpp  pipeline_builder.cpp
src/filters/: absolute.cpp  abstract_generator.cpp  am_generator.cpp  ampl.cpp  fm_generator.cpp  lowpass.cpp  normalize.cpp  reverse.cpp  silence.cpp  sin_generator.cpp  sound_cut.cpp  timestretch.cpp
src/wav/: file_processor.cpp  wav_reader.cpp  wav_writer.cpp  waveform.cpp
tests/: tests.cpp
